# PadeApproximants

./: .clang-tidy  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
c++/PadeApproximant/: CMakeLists.txt  toto.cpp  toto.hpp
c++/triqs/utility/: CMakeLists.txt  pade_approximants.hpp
doc/: CMakeLists.txt  about.rst  changelog.rst  conf.py.in  contents.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
python/PadeApproximant/: CMakeLists.txt  toto_module_desc.py  version.py.in
python/PadeApproximants/: CMakeLists.txt  __init__.py  pade_approximants_desc.py  version.py.in
share/: CMakeLists.txt  PadeApproximant.modulefile.in  PadeApproximants.modulefile.in
share/cmake/: CMakeLists.txt  PadeApproximant-config-version.cmake.in  PadeApproximant-config.cmake.in  PadeApproximants-config-version.cmake.in  PadeApproximants-config.cmake.in
test/c++/: CMakeLists.txt  toto.cpp
test/python/: CMakeLists.txt  Toto.py  chain.py  pade_approximant.py
